--- a/index.html
+++ b/index.html
@@ -12,38 +12,19 @@
 
     <div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
         <div class="container">
-          <a href="../" class="navbar-brand">Bootswatch</a>
+          <a href="index.html" class="navbar-brand">HOME</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Themes <span class="caret"></span></a>
-                <div class="dropdown-menu" aria-labelledby="themes">
-                  <a class="dropdown-item" href="../default/">Default</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="../cerulean/">Cerulean</a>
-                  <a class="dropdown-item" href="../cosmo/">Cosmo</a>
-                  <a class="dropdown-item" href="../cyborg/">Cyborg</a>
-                  <a class="dropdown-item" href="../darkly/">Darkly</a>
-                  <a class="dropdown-item" href="../flatly/">Flatly</a>
-                  <a class="dropdown-item" href="../journal/">Journal</a>
-                  <a class="dropdown-item" href="../litera/">Litera</a>
-                  <a class="dropdown-item" href="../lumen/">Lumen</a>
-                  <a class="dropdown-item" href="../lux/">Lux</a>
-                  <a class="dropdown-item" href="../materia/">Materia</a>
-                  <a class="dropdown-item" href="../minty/">Minty</a>
-                  <a class="dropdown-item" href="../pulse/">Pulse</a>
-                  <a class="dropdown-item" href="../sandstone/">Sandstone</a>
-                  <a class="dropdown-item" href="../simplex/">Simplex</a>
-                  <a class="dropdown-item" href="../sketchy/">Sketchy</a>
-                  <a class="dropdown-item" href="../slate/">Slate</a>
-                  <a class="dropdown-item" href="../solar/">Solar</a>
-                  <a class="dropdown-item" href="../spacelab/">Spacelab</a>
-                  <a class="dropdown-item" href="../superhero/">Superhero</a>
-                  <a class="dropdown-item" href="../united/">United</a>
-                  <a class="dropdown-item" href="../yeti/">Yeti</a>
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="vizall.html" id="themes">Visualizations <span class="caret"></span></a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="viz1.html">Visualization 1</a>
+                  <a class="dropdown-item" href="viz2.html">Visualization 2</a>
+                  <a class="dropdown-item" href="viz3.html">Visualization 3</a>
+                  <a class="dropdown-item" href="viz4.html">Visualization 4</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -82,7 +63,7 @@
       </div>
       <div class="bs-component">
         <div class="jumbotron">
-          <h1 class="display-3">Hello, world!</h1>
+          <h1 class="display-3">title here</h1>
           <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
           <hr class="my-4">
           <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
