--- a/index.html
+++ b/index.html
@@ -3,80 +3,69 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Review</title>
-  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.css" media="screen">
-  <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
+  <title>Stacey Smith - 11-Web_Homework</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="LUX.css" media="screen">
+    <link rel="stylesheet" href="lux.min.css">
+  
 </head>
 
 <body>
-
-    <div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-        <div class="container">
-          <a href="index.html" class="navbar-brand">HOME</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="vizall.html" id="themes">Visualizations <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="viz1.html">Visualization 1</a>
-                  <a class="dropdown-item" href="viz2.html">Visualization 2</a>
-                  <a class="dropdown-item" href="viz3.html">Visualization 3</a>
-                  <a class="dropdown-item" href="viz4.html">Visualization 4</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../help/">Help</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://blog.bootswatch.com">Blog</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">Lux <span class="caret"></span></a>
-                <div class="dropdown-menu" aria-labelledby="download">
-                  <a class="dropdown-item" target="_blank" href="https://jsfiddle.net/bootswatch/8zet8yhz/">Open in JSFiddle</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="../4/lux/bootstrap.min.css" download>bootstrap.min.css</a>
-                  <a class="dropdown-item" href="../4/lux/bootstrap.css" download>bootstrap.css</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="../4/lux/_variables.scss" download>_variables.scss</a>
-                  <a class="dropdown-item" href="../4/lux/_bootswatch.scss" download>_bootswatch.scss</a>
-                </div>
-              </li>
-            </ul>
   
-          </div>
-        </div>
-      </div>
+   <!-- MAIN NAV BAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="index.html" target="_blank" align="left">US MEDIAN INCOME, EMPLOYMENT, <BR>& HOMICIDE RATES</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   
-
-
-
-
-
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="page-header">
-        <h1 id="containers">Containers</h1>
-      </div>
-      <div class="bs-component">
-        <div class="jumbotron">
-          <h1 class="display-3">title here</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-          <hr class="my-4">
-          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-          <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-          </p>
-        </div>
-      </div>
+    <div class="navbar-collapse collapse show" id="navbarColor01">
+      <ul class="navbar-nav mr-auto" align="right">
+        <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="vizall.html">All</a>
+              <a class="dropdown-item" href="viz1.html">Male Victims and Unemployment</a>
+              <a class="dropdown-item" href="viz2.html">Female Victims and Unemployment</a>
+              <a class="dropdown-item" href="viz3.html">Male Victims and Median Income</a>
+              <a class="dropdown-item" href="viz4.html">Female Victims and Median Income</a>
+            </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="vizall.html">Comparisons</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+<!-- END MAIN NAV BAR -->
 
+<!-- MAIN BODY - EVERYTHING HELD IN THE JUMBOTRON -->
+<div class="jumbotron">
 
+  <div class="card text-white bg-danger mb-3" style="max-width: 75rem;">
+    <div class="card-header">ARE INCOME LEVEL AND HOMICIDE CONNECTED?</div>
+    <div class="card-body">
+      <h4 class="card-title"></h4>
+      <p class="card-text">For our Group Project, we wanted to know:  how likely is it that a person might be a victim 
+        of homicide, based on their income?<br>  
+        To find out, we analyzed FBI and US Census Data, looking specifically at median income and unemployment levels for both men and women.<br><br>
+        <a class="btn btn-primary btn-lg" href="data.html" role="button">See the Data</a></p>
+    </div>
+  </div>
 
-
-
+</div>
+<!-- END MAIN BODY -->
 
 </body>
