--- a/natl_sex_data.html
+++ b/natl_sex_data.html
@@ -1,69 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Stacey Smith - 11-Web_Homework</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="LUX.css" media="screen">
-    <link rel="stylesheet" href="lux.min.css">
-  
-</head>
-
-<body>
-  
-        <!-- MAIN NAV BAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="index.html" target="_blank" align="left">US MEDIAN INCOME, EMPLOYMENT, <BR>& HOMICIDE RATES</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="navbar-collapse collapse show" id="navbarColor01">
-        <ul class="navbar-nav mr-auto" align="right">
-          <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="vizall.html">All</a>
-                <a class="dropdown-item" href="viz1.html">Male Victims and Unemployment</a>
-                <a class="dropdown-item" href="viz2.html">Female Victims and Unemployment</a>
-                <a class="dropdown-item" href="viz3.html">Male Victims and Median Income</a>
-                <a class="dropdown-item" href="viz4.html">Female Victims and Median Income</a>
-              </div>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="vizall.html">Comparisons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  <!-- END MAIN NAV BAR -->
-
-
-
-<!--  HOMICIDE DATA  -->
-<div class="container">
-  <div class="row">
-    <div class="col-md-12 plaincontainer">
-      <h1>FBI National Homicide Data</h1>
-      <h4>Victims by sex per year</h4>
-
-<div class="table-responsive">
-<table class="table">
+<table border="1" class="dataframe">
   <thead>
-    <tr>
+    <tr style="text-align: right;">
       <th></th>
       <th>male_count</th>
       <th>female_count</th>
@@ -263,10 +200,3 @@
     </tr>
   </tbody>
 </table>
-</div>
-
-    </div>
-  </div>
-</div>
-<!-- END HOMICIDE DATA -->
-</body>
